prevents overflowing for names that are too long

--- a/src/public/styles/me.css
+++ b/src/public/styles/me.css
@@ -477,6 +477,7 @@ ol, ul {
   text-align: left;
   font-size: 12px;
   color: grey;
+  overflow-x: hidden;
 }
 
 #existing-rooms {
